# m2s2-rust-math

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
m2s2-geometry/: Cargo.toml
m2s2-geometry/src/: aabb.rs  lib.rs  obb.rs  plane.rs  ray.rs  sphere.rs  triangle.rs
m2s2-math/: CHANGELOG.md  README.md
m2s2-math/src/: lib.rs
m2s2-math/src/matrix/: mod.rs
src/matrix/: base_ops.rs  linear_ops.rs  mod.rs  transform_impl.rs  transform_traits.rs
src/quaternion/: mod.rs
src/vector/: mod.rs  vector_algebra.rs  vector_ops.rs
